# Multi-agent-decision-making

./: .gitignore  CONTEXT.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
.github/workflows/: release.yml
docs/: MVP设计.md  MVP验收记录.md  TypeScript实现与验收.md  TypeScript当前实现架构审查.md  TypeScript目标架构.md  multi-agent-cli-dispatch任务复盘与skill优化.md  审议展示页面UIUX优化建议.md  新增CLI适配器验证清单.md
docs/adr/: 0001-编排本机已安装的CLI运行时.md  0002-采用结构化审议.md  0003-由应用统一管理审议记录.md  0004-MVP使用原生DevUI.md  0005-以透明文件保存审议档案.md  0006-通过材料快照隔离原始工作目录.md  0007-分离CLI适配器与Agent配置.md  0007-分离CLI配置与审议Agent.md  0008-组局Agent只生成单次审议方案.md  0009-使用自定义Workflow状态机.md  0010-DevUI与命令行入口共用审议引擎.md  0011-按需执行一次争议收敛轮.md  0012-以TypeScript审议进程作为状态所有者.md  0013-分离结构化审议与自由讨论调度器.md  0014-分离观察服务与审议进程.md  0015-每次审议固定执行组局阶段.md  0016-以逻辑调用为恢复边界.md  0017-直接只读访问工作目录.md  0018-由审议控制台发起独立审议进程.md
docs/config示例/: clis.toml
docs/各agent信息收集/: models-dev核验.md  各agent模型信息.md
docs/审查/: 审查结果综合分析与修改意见.md
docs/审查报告/: 00-整合指导报告.md  PR-28-合并操作指导.md
scripts/: smoke_adapters.py
src/cli/: index.ts  (+1 more)
tests/: test_adapters.py  test_cli.py  test_config.py  test_context.py  test_devui.py  test_disputes.py  test_docs.py  test_engine.py  test_planning.py  test_snapshot.py
tests-ts/: adapters-ts.test.ts  archive.test.ts  cli-e2e.test.ts  config.test.ts  context-manager.test.ts  discussion.test.ts  execution.test.ts  init-template.test.ts  interrupt.test.ts  launch-coordinator.test.ts  limits.test.ts  mailbox.test.ts  markdown.test.ts  observer.test.ts  planning.test.ts  read-only.test.ts  structured.test.ts
(+121 files in other folders)
