[project]
name = "multi-agent-decision"
version = "0.1.0"
description = "编排本机 AI CLI 的多 Agent 结构化审议工具"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "agent-framework-core==1.11.0",
  "agent-framework-devui==1.0.0b260709",
]

[project.scripts]
mad = "mad.cli:main"

[dependency-groups]
dev = ["pytest==8.4.2", "pytest-asyncio==1.2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mad"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
